--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="/css/main.css">
+</head>
 <body>
     <li><a href="/smb1.html">SMB1</a></li>
+  
 </body>
 </html>
