--- a/smb1.html
+++ b/smb1.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        D70...
-    </body>
+<head>
+        <link rel="stylesheet" href="/css/main.css">
+</head>
+<body>
+    <h1>SMB1</h1>
+    <h3>D70 and D60 Subspeed</h3>
+    <p><a href="https://docs.google.com/spreadsheets/d/1kNSwx-7x4YVN4EOZFIXO3sWarC1hj5HHlTxHCky2pIY/edit?usp=sharing" target="_blank">
+        Sheet I made showing what subspeeds work with each combination of pole inputs.</a> Includes a sheet for D60 aswell. </p>
+        
+        <h3>Walljump Speeds</h3>
+        <p>Helpful <a href="smb1/WalljumpSpeed/wjspeeds.svg"> walljump speed chart.</a> 
+            Includes labeled subpixel positions and the walljump speed the corresponds with each.
+            Note that subspeed plays a role in the speed of the walljump. The chart assumes
+            optimal subspeed so the window for fast walljumps may be smaller than shown.</p>
+</body>
 </html>
